Prevent selection of blurred email

--- a/less/admin/UsersListPage.less
+++ b/less/admin/UsersListPage.less
@@ -85,6 +85,7 @@
 
     &[data-email-shown="false"] {
       .UserList-emailAddress {
+        user-select: none;
         filter: blur(4px);
       }
     }
